--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,10 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="dvm"></div>
+    
+
+    <div class="quiz_widget" data-course="math" data-exercise="simple_math_addition" data-title="Math Addition Game"></div>
+    <div class="quiz_widget" data-course="math" data-exercise="simple_math_subtraction" data-title="Math Subtraction Game"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
