Crap around skeleton

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     
 
-    <div class="quiz_widget" data-course="math" data-exercise="simple_math_addition" data-title="Math Addition Game"></div>
+    <!-- <div class="quiz_widget" data-course="math" data-exercise="simple_math_addition" data-title="Math Addition Game"></div> -->
     <div class="quiz_widget" data-course="math" data-exercise="simple_math_subtraction" data-title="Math Subtraction Game"></div>
     <!--
       This HTML file is a template.
