--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,6 @@
     
 
     <!-- <div class="quiz_widget" data-course="math" data-exercise="simple_math_addition" data-title="Math Addition Game"></div> -->
-    <div class="quiz_widget" data-course="math" data-exercise="simple_math_subtraction" data-title="Math Subtraction Game"></div>
+    <div class="quiz_widget" data-game-id="1fa6964d-0f1f-453b-9aeb-309e52599204" data-user-id="2"></div>
   </body>
 </html>
